@@ -161,6 +161,7 @@ void widget_checkbox_fileselect(
  ***********************************************************************/
 void widget_checkbox_refresh(variable *var)
 {
+	GFileMonitor     *monitor;
 	GList            *element;
 	gchar            *act;
 	gchar            *value;
@@ -181,8 +182,13 @@ void widget_checkbox_refresh(variable *var)
 		if (input_is_shell_command(act))
 			widget_checkbox_input_by_command(var, act + 8);
 		/* input file stock = "File:", input file = "File:/path/to/file" */
-		if (strncasecmp(act, "file:", 5) == 0 && strlen(act) > 5)
+		if (strncasecmp(act, "file:", 5) == 0 && strlen(act) > 5) {
+			if (!initialised) {
+				/* Check for file-monitor and create if requested */
+				widget_file_monitor_will_create(var, act + 5);
+			}
 			widget_checkbox_input_by_file(var, act + 5);
+		}
 		act = attributeset_get_next(&element, var->Attributes, ATTR_INPUT);
 	}
 
@@ -216,6 +222,10 @@ void widget_checkbox_refresh(variable *var)
 			gtk_widget_set_sensitive(var->Widget, FALSE);
 
 		/* Connect signals */
+		if ((monitor = g_object_get_data(G_OBJECT(var->Widget), "_monitor"))) {
+			g_signal_connect(monitor, "changed",
+				G_CALLBACK(on_any_widget_file_changed_event), (gpointer)var);
+		}
 		g_signal_connect(G_OBJECT(var->Widget), "toggled",
 			G_CALLBACK(on_any_widget_toggled_event), (gpointer)var->Attributes);
 	}
